apps/mongodb/values/dev/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mongodb-dev
spec:
  serviceName: mongodb
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
      annotations:
        checksum/config: "${RANDOM}"
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.18
        command:
        - mongod
        args:
        - "--bind_ip_all"
        - "--replSet"
        - "rs0"
        ports:
        - containerPort: 27017
          name: mongodb
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        readinessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 10
      terminationGracePeriodSeconds: 30
  volumeClaimTemplates:
  - metadata:
      name: mongodb-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 10Gi
