apps/mongodb/values/dev/mongodb-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fintech-data-import-to-mongodb
  namespace: mongodb-dev
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:
    # Permitir tráfico desde fintech-data-import en el namespace fintech-dev
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: fintech-data-import
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: fintech-dev
    # Permitir todo el tráfico dentro del mismo namespace mongodb-dev
    - from:
        - podSelector: {}
  policyTypes:
    - Ingress
